Fixed sizing and spacing
Fixed mobile layout for buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -468,7 +468,7 @@ span {
 input.src-user {
   border: 1px solid lightgrey;
   border-radius: 0.4em;
-  width: 450px;
+  width: 300px;
   height: 40px;
   margin-bottom: 30px;
 }
@@ -476,7 +476,7 @@ input.src-user {
 input.message-user {
   border: 1px solid lightgrey;
   border-radius: 0.4em;
-  width: 450px;
+  width: 300px;
   height: 150px;
 }
 
@@ -485,6 +485,7 @@ input.message-user {
   justify-content: flex-end;
   margin-top: 20px;
   height: 45px;
+  padding: 3px;
 }
 
 .settings__timezone {
@@ -502,6 +503,7 @@ input.message-user {
 }
 
 .btn button {
+
   height: 40px;
   margin: 10px;
   margin-right: 30px;
@@ -512,8 +514,8 @@ input.message-user {
   color: white;
   font-size: 0.75em;
   font-weight: bold;
-  width: 200px;
-  position: relative;
+  width: 150px;
+
 }
 
 .btn button:hover, .btn-bar button:hover {
@@ -524,22 +526,24 @@ input.message-user {
   display: flex;
   flex-direction: column;
 width: 100%;
+border-top: 2px solid grey;
 }
 
 .buttonsRight {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  width: 50%;
-  padding-top: 53px;
+  width: 40%;
+  padding-top: 10px;
   margin-left: 0;
 }
 
 .messageUserContainer {
   width: 100%;
-  padding-left: 2px;
+  padding-left: 12px;
   border-right: 2px;
   border-right-color: grey;
+  padding-bottom: 5px;
 }
 
 .src-user:hover, .message-user:hover {
@@ -594,8 +598,8 @@ width: 100%;
 .members-container, .activity-widget {
   border-top: 2px solid rgb(145, 143, 143);
   border-bottom: 2px solid rgb(145, 143, 143);
-  margin-top: 25px;
   float: left;
+  margin-left: 12px;
   padding-left: 25px;
   display: flex;
   flex-direction: column;
